@@ -40,6 +40,7 @@
 #endif
 
 #include "dotlock.h"
+#include "helpers.h"
 
 #ifdef HAVE_GETOPT_H
 #include <getopt.h>
@@ -88,7 +89,7 @@ int main (int argc, char **argv)
   /* determine the system's host name */
   
   uname (&utsname);
-  if (!(Hostname = strdup (utsname.nodename)))
+  if (!(Hostname = safe_strdup (utsname.nodename)))
     return DL_EX_ERROR;
   if ((p = strchr (Hostname, '.')))
     *p = '\0';
